--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -370,7 +370,7 @@ allowing to perform data calculations.\ke{abgeshen davon dass ich more and more 
 %\emph{Physical Data Description (PHDD)}\footnote{\url{https://github.com/linked-statistics/physical-data-description}} is a vocabulary to represent data in tabular format in RDF.\tb{tabular data} 
 %The data could be either represented in records with character-separated values (CSV) or in records with fixed length. 
 Portals harvest metadata (as well as publicly available data) from multiple RDF data providers.
-To ensure high quality, (meta)data must satisfy certain criteria - specified in terms of RDF constraints.\ke{verwirrend. wie gesagt, können wir nicht bei RDF data bleiben? was anderes behandelt ihr doch eh nicht und qb enthält doch keine metadaten.} 
+To ensure high quality, (meta)data must satisfy certain criteria - specified in terms of RDF constraints.\ke{verwirrend. wie gesagt, können wir nicht bei RDF data bleiben? was anderes behandelt ihr doch eh nicht und qb enthält doch keine metadaten.} \tb{ich wollte nu beschreiben, dass data provider verantwortlich dafür sind, dass ihre daten festgelegten regeln / bedingungen / constraints entsprechen / wenn von mehreren data providern geharvestet wird, ist das noch eine zusätzliche dimension, können wir aber auch weglassen}
 
 For more detailed analyses, researchers refer to person-level data including additional variables needed to answer subsequent research questions
 %Although not that common, the other direction is also possible, 
